# log4cpp

./: .gitignore  CMakeLists.txt
cmake/: cmake-commonConfig.cmake.in  log4cppConfig.cmake.in
